--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 JuliaFlix
 
-<h1?>aqui temos os melhores filmes do momento</h1>
+<h1>aqui temos os melhores filmes do momento</h1>
 
 
 #Crepusculo 
