--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
-JuliaFlix
+<html>
+    <head>
+          <title>JuliaFlix</title>
+</head>
+<body>
+    <header> JuliaFlix</header>
+    
+    <h1>aqui temos os melhores filmes do momento!</h1>
 
-<h1>aqui temos os melhores filmes do momento!</h1>
 
-
-<p>#crepusculo</p>
+     <p>#crepusculo</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Ru8THEGdcEU?si=9aeygBIbzqtUa19N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</body>
+
+</html>
